Archive2/5b/3c1bff7e7215e9/output
+ mv main.cpp main.c
+ gcc -std=c99 -O0 -Wall -Wextra -pedantic -pthread main.c
main.c:5:19: error: expected ':', ',', ';', '}' or '__attribute__' before '=' token
     int value[10] = {0};
                   ^
main.c:4:8: warning: struct has no members [-Wpedantic]
 struct bla{
        ^
main.c: In function 'main':
main.c:11:16: warning: unused variable 'a' [-Wunused-variable]
     struct bla a;
                ^
